--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 </head>
 <body>
     <div class="container">
-        <div class="row">
-            <div class="col-4 offset-4 py-5" id="carousel"></div>
+        <div class="row align-items-center schermata">
+            <button type="button" class="btn btn-outline-dark col-1" id="back"><</button>
+            <div class="col-10 text-center" id="carousel"></div>
+            <button type="button" class="btn btn-outline-dark col-1" id="forward">></button>
         </div>
     </div>
     <script src="./js/main.js"></script>
